rename unit test

--- a/SimpleMessageSystemTest/SimpleMessageSystemTest.csproj
+++ b/SimpleMessageSystemTest/SimpleMessageSystemTest.csproj
@@ -46,7 +46,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="MessengerTest.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Messaging\SimpleMessageSystem.csproj">
+      <Project>{A90B4E64-890B-4FB1-B3BE-90950D6EEA05}</Project>
+      <Name>SimpleMessageSystem</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
